...
                        android:text="@string/nav_notifications"
                        android:textColor="@color/nav_inactive"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabMarket"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/fg_tab_press"
...
